exclude images from rev, switch back to goog style

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,15 +5,15 @@
         <h1 class="panel-title" ng-bind="emojiName.name"></h1>
       </div>
       <!-- Hangouts style emoji -->
-      <!-- <p class="panel-body text-center">
+      <p class="panel-body text-center">
         <img ng-src="images/emoji/img-hangouts-128/{{emojiName.sprite1.hangouts_img}}"/>
         <img ng-src="images/emoji/img-hangouts-128/{{emojiName.sprite2.hangouts_img}}"/>
-      </p> -->
+      </p>
       <!-- Apple style emoji -->
-      <p class="panel-body">
+      <!-- <p class="panel-body">
         <img src="images/transparent.gif" style="width:64px; height:64px;  top:0px; left:0px; background:url(images/emoji/sheet_64.png) -{{emojiName.sprite1.x * 64}}px -{{emojiName.sprite1.y * 64}}px"/>
         <img src="images/transparent.gif" style="width:64px; height:64px; top:0px; left:0px; background:url(images/emoji/sheet_64.png) -{{emojiName.sprite2.x * 64}}px -{{emojiName.sprite2.y * 64}}px"/>
-      </p>
+      </p> -->
       <!-- Debug -->
       <!-- {{emojiName}} -->
     </div>
